[metadata]
name = MFCTool
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/MFCTool
description = A library for accessing MifareClassicTool hex dumps
long_description = file: README.md
keywords = MFCtool, Mifare Classic, NXP
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
packages = MFCTool
include_package_data = True
setup_requires = setuptools_scm; kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py.git#egg=kaitaiStructCompile;
test_suite = tests.tests.Tests
install_requires =
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git#egg=kaitaistruct


[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py.git#egg=kaitaiStructCompile"]
